Editorial changes to Chaps 1-8 Controller UG
Peer review corrections

Make edits to Controller User Guide

https://issues.redhat.com/browse/AAP-21967

--- a/downstream/modules/platform/con-controller-keep-subscription-in-compliance.adoc
+++ b/downstream/modules/platform/con-controller-keep-subscription-in-compliance.adoc
@@ -24,7 +24,7 @@ Where:
 Other important information displayed are:
 
 * *Hosts automated*: Host count automated by the job, which consumes the license count.
-* *Hosts imported*: Host count considering unique host names across all inventory sources. This number(does not impact hosts remaining.
+* *Hosts imported*: Host count considering unique host names across all inventory sources. This number does not impact hosts remaining.
 * *Hosts remaining*: Total host count minus hosts automated.
 * *Hosts deleted*: Hosts that were deleted, freeing the license capacity.
 * *Active hosts previously deleted*: Number of hosts now active that were previously deleted.
@@ -38,7 +38,7 @@ For example, if you have a subscription capacity of 10 hosts:
 = Viewing the host activity
 
 .Procedure
-. In the navigation panel, elect btn:[Host Metrics] to view the activity associated with hosts, such as those that have been automated and deleted. 
+. In the navigation panel, select btn:[Host Metrics] to view the activity associated with hosts, such as those that have been automated and deleted. 
 +
 Each unique hostname is listed and sorted by the user's preference.
 +
