--- a/downstream/modules/platform/con-controller-overview-details.adoc
+++ b/downstream/modules/platform/con-controller-overview-details.adoc
@@ -128,7 +128,8 @@ For more information, see xref:controller-workflows[Workflows in {ControllerName
 
 = Job distribution
 
-Take a fact gathering or configuration job running across thousands of machines and divide it into slices that can be distributed across your automation controller cluster for increased reliability, faster job completion, and improved cluster use.
+Take a fact gathering or configuration job running across thousands of machines and divide it into slices that can be distributed across your {ControllerName} cluster for increased reliability, faster job completion, and improved cluster use.
+
 For example, you can change a parameter across 15,000 switches at scale, or gather information across your multi-thousand-node RHEL estate.
 
 For more information, see xref:controller-job-slicing[Job Slicing].
