--- a/downstream/modules/platform/con-controller-create-users.adoc
+++ b/downstream/modules/platform/con-controller-create-users.adoc
@@ -7,7 +7,7 @@ ifdef::controller-GS[]
 A default administrator user with the role of *System Administrator* is automatically created and is available to all users of {ControllerName}. 
 You can use it as it is or edit it later. 
 endif::controller-GS[]
-Other users can be added to an organization, including a *Normal User*, *System Auditor*, or *System Administrator*, but they must be created them first.
+Other users can be added to an organization, including a *Normal User*, *System Auditor*, or *System Administrator*, but they must be created first.
 
 ifdef::controller-GS[]
 For more information, see the link:https://docs.ansible.com/automation-controller/4.4/html/userguide/users.html#ug-users-create[Users] section in the Automation Controller User Guide.
