--- a/downstream/modules/platform/proc-controller-creating-a-user.adoc
+++ b/downstream/modules/platform/proc-controller-creating-a-user.adoc
@@ -2,7 +2,7 @@
 
 = Creating a user
 
-To create a new users in {ControllerName} and assign them a role.
+To create new users in {ControllerName} and assign them a role.
 
 .Procedure
 . On the *Users* page, click btn:[Add].
