Editorial changes to Chaps 1-8 Controller UG
Corrections

Make edits to Controller User Guide

https://issues.redhat.com/browse/AAP-21967

--- a/downstream/modules/platform/proc-controller-obtaining-subscriptions.adoc
+++ b/downstream/modules/platform/proc-controller-obtaining-subscriptions.adoc
@@ -3,7 +3,7 @@
 = Obtaining an authorized Ansible {ControllerName} subscription
 
 If you already have a subscription to a Red Hat product, you can acquire an {ControllerName} subscription through that subscription.
-If you do not have a subcription to {PlatformName} and Red Hat Satellite, you can request a trial subscription.
+If you do not have a subscription to {PlatformName} and Red Hat Satellite, you can request a trial subscription.
 
 .Procedure
 
