Editorial changes to Chaps 1-8 Controller UG
Further edits

Make edits to Controller User Guide

https://issues.redhat.com/browse/AAP-21967
Resolve merge conflicts

--- a/downstream/modules/platform/proc-controller-obtaining-subscriptions.adoc
+++ b/downstream/modules/platform/proc-controller-obtaining-subscriptions.adoc
@@ -13,7 +13,7 @@ See xref:controller-importing-subscriptions[Importing a subscription].
 endif::controller-UG[]
 ifdef::controller-GS,controller-AG[]
 * If you have a {PlatformName} subscription, use your Red Hat customer credentials when you launch the {ControllerName} to access your subscription information.
-See link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/2.4/html-single/automation_controller_user_guide/index#controller-importing-subscriptions[Importing a subscription].
+See link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_user_guide/index#controller-importing-subscriptions[Importing a subscription].
 endif::controller-GS,controller-AG[]
 
 * If you have a non-Ansible Red Hat or Satellite subscription, access {ControllerName} with one of these methods:
