Replace plain text with attributes for content in the dev-guide module.
This PR is specific to the 2.3 branch and version of our docs. The main PR is #1044

Replace plain-text with attributes where appropriate

Affects the following titles:

```./aap-operations-guide/platform/dev-guide
./upgrade/platform/dev-guide
./aap-operator-installation/platform/dev-guide
./aap-installation-guide/platform/dev-guide
./aap-planning-guide/platform/dev-guide
./automation-mesh/platform/dev-guide
./ocp_performance_guide/platform/dev-guide
./controller/controller-user-guide/platform/dev-guide
./controller/controller-admin-guide/platform/dev-guide
./controller/controller-getting-started/platform/dev-guide
./aap-operator-backup/platform/dev-guide
./aap-containerized-install/platform/dev-guide
./dev-guide/dev-guide```

https://issues.redhat.com/browse/AAP-19894

--- a/downstream/modules/dev-guide/proc-create-role.adoc
+++ b/downstream/modules/dev-guide/proc-create-role.adoc
@@ -5,7 +5,7 @@
 = Creating roles
 
 [role="_abstract"]
-You can create roles using the Ansible Galaxy CLI tool. Role-specific commands can be accessed from the `roles` subcommand.
+You can create roles by using the {Galaxy} CLI tool. Role-specific commands can be accessed from the `roles` subcommand.
 
 -----
 ansible-galaxy role init <role_name>
@@ -58,4 +58,4 @@ This will create a role named `my_role` by copying the contents of `~/role_skele
 [role="_additional-resources"]
 .Additional resources
 
-* For more information on creating roles, see link:https://galaxy.ansible.com/docs/contributing/creating_role.html[Creating roles] in the Ansible Galaxy documentation.
+* For more information about creating roles, see link:https://galaxy.ansible.com/docs/contributing/creating_role.html[Creating roles] in the {Galaxy} documentation.
