--- a/downstream/modules/platform/ref-controller-credential-azure-resource.adoc
+++ b/downstream/modules/platform/ref-controller-credential-azure-resource.adoc
@@ -1,6 +1,6 @@
 [id="ref-controller-credential-azure-resource"]
 
-= {Azure} Resource Manager
+= {Azure} Resource Manager credential type
 
 Select this credential type to enable synchronization of cloud inventory with {Azure} Resource Manager.
 
