Replace plain text with attributes for content in the automation-hub module
This PR is specific to the 2.3 branch and version of our docs. The main PR is #1073.

Affects the following titles:

```
./aap-operations-guide
./upgrade
./aap-operator-installation
./aap-installation-guide
./aap-planning-guide
./automation-mesh
./ocp_performance_guide
./controller/controller-user-guide
./controller/controller-getting-started
./aap-operator-backup
./aap-containerized-install
./builder
./hub/managing-content
./hub/getting-started
```

Replace plain-text with attributes where appropriate

https://issues.redhat.com/browse/AAP-19894

--- a/downstream/modules/automation-hub/con-ansible-galaxy-client.adoc
+++ b/downstream/modules/automation-hub/con-ansible-galaxy-client.adoc
@@ -3,9 +3,9 @@
 
 [id="con-ansible-galaxy-client_{context}"]
 
-= Ansible Galaxy client
+= {Galaxy} client
 
-The Ansible Galaxy client `ansible-galaxy` is a command-line interface used to perform various roles and collections related operations. Configure the 'ansible-galaxy' client to use Red Hat Automation Hub.
+The {Galaxy} client `ansible-galaxy` is a command-line interface used to perform various roles and collections related operations. Configure the 'ansible-galaxy' client to use Red Hat {HubName}.
 
 // .Additional resources
 // * A bulleted list of links to other material closely related to the contents of the procedure module.
