--- a/downstream/modules/automation-hub/con-collections.adoc
+++ b/downstream/modules/automation-hub/con-collections.adoc
@@ -6,4 +6,4 @@
 
 = Collections
 
-Collections are a distribution format for Ansible content that can include playbooks, roles, modules, and plugins. You can install and use collections through Ansible Galaxy.
+Collections are a distribution format for Ansible content that can include playbooks, roles, modules, and plugins. You can install and use collections through {Galaxy}.
