--- a/downstream/modules/automation-hub/con-user-access.adoc
+++ b/downstream/modules/automation-hub/con-user-access.adoc
@@ -2,7 +2,7 @@
 
 = About user access
 
-You can manage user access to content and features in Automation Hub by creating groups of users that have specific permissions.
+You can manage user access to content and features in {HubName} by creating groups of users that have specific permissions.
 
 == How to implement user access
 
@@ -10,14 +10,14 @@ User access is based on managing permissions to system objects (users, groups, n
 
 You assign permissions to the groups you create. You can then assign users to these groups. This means that each user in a group has the permissions assigned to that group.
 
-Groups created in Automation Hub can range from system administrators responsible for governing internal collections, configuring user access, and repository management to groups with access to organize and upload internally developed content to Automation Hub.
+Groups created in {HubName} can range from system administrators responsible for governing internal collections, configuring user access, and repository management to groups with access to organize and upload internally developed content to {HubName}.
 
 *  See xref:ref-permissions[Automation Hub permissions] for information on system permissions.
 
 == Default user access
 
-When you install Automation hub, the default *admin* user is created in the *Admin* group. This group is assigned all permissions in the system.
+When you install {HubName}, the default *admin* user is created in the *Admin* group. This group is assigned all permissions in the system.
 
 == Getting started
 
-Log in to your local Automation Hub using credentials for the *admin* user configured during installation.
+Log in to your local {HubName} using credentials for the *admin* user configured during installation.
