--- a/downstream/modules/automation-hub/proc-create-api-token-pah.adoc
+++ b/downstream/modules/automation-hub/proc-create-api-token-pah.adoc
@@ -1,9 +1,9 @@
 // Module included in the following assemblies:
 // obtaining-token/master.adoc
 [id="proc-create-api-token-pah"]
-= Creating the API token in private automation hub
+= Creating the API token in {PrivateHubName}
 
-You can create an API token using *API Token Management* in PAH.
+You can create an API token by using *API Token Management* in {PrivateHubName}.
 
 .Prerequisites
 
