--- a/downstream/modules/automation-hub/proc-create-super-users.adoc
+++ b/downstream/modules/automation-hub/proc-create-super-users.adoc
@@ -4,15 +4,15 @@
 
 = Creating a super user
 
-You can create a super user in automation hub and spread administration work across your team. 
+You can create a super user in {HubName} and spread administration work across your team. 
 
 .Prerequisites
 
-* You have *Super user* permissions and can create users in automation hub.  
+* You have *Super user* permissions and can create users in {HubName}.  
 
 .Procedure
-. Log in to your local automation hub.
-. Navigate to menu:User Access[].
+. Log in to your local {HubName}.
+. Go to menu:User Access[].
 . Click btn:[Users].
 . Select the user you want to be a super user to see the User details page.
 . Select *Super User* under User type.
