--- a/downstream/modules/automation-hub/proc-set-community-remote.adoc
+++ b/downstream/modules/automation-hub/proc-set-community-remote.adoc
@@ -15,7 +15,7 @@ See https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_pla
 .Requirements.yml example
 -----
 collections:
-  # Install a collection from Ansible Galaxy.
+  # Install a collection from {Galaxy}.
   - name: community.aws
     version: 5.2.0
     source: https://galaxy.ansible.com
