--- a/downstream/modules/automation-hub/proc-upload-collection.adoc
+++ b/downstream/modules/automation-hub/proc-upload-collection.adoc
@@ -3,17 +3,17 @@
 
 .Prerequisites
 
-* You have configured the `ansible-galaxy` client for Red Hat Automation Hub.
+* You have configured the `ansible-galaxy` client for {HubName}.
 * You have at least one namespace.
 * You have run all content through `ansible-test sanity`.
 * You are a Red Hat Connect Partner. Learn more at https://connect.redhat.com/[Red Hat Partner Connect].
 
 .Procedure
 
-To upload your collection using the Automation Hub user interface:
+To upload your collection using the {HubName} user interface:
 
-. Log in to Red Hat Ansible Automation platform.
-. Navigate to menu:Automation Hub[My Namespaces].
+. Log in to {PlatformName}.
+. Go to menu:Automation Hub[My Namespaces].
 . Click a namespace.
 . Click btn:[Upload collection].
 . In the *New collection* modal, click btn:[Select file]. Locate the file on your system.
