--- a/downstream/modules/automation-hub/con-create-api-token.adoc
+++ b/downstream/modules/automation-hub/con-create-api-token.adoc
@@ -1,9 +1,9 @@
 [id="con-create-api-token"]
-= Creating the Red Hat automation hub API token
+= Creating the Red Hat {HubName} API token
 
-Before you can interact with automation hub by uploading or downloading collections, you must create an API token. The automation hub API token authenticates your `ansible-galaxy` client to the Red Hat automation hub server.
+Before you can interact with {HubName} by uploading or downloading collections, you must create an API token. The {HubName} API token authenticates your `ansible-galaxy` client to the Red Hat {HubName} server.
 
-You can create an API token using automation hub *Token management* in automation hub or *API Token Management* in private automation hub (PAH).
+You can create an API token by using *Token management* in {HubName} or *API Token Management* in {PrivateHubName} (PAH).
 
 include::proc-create-api-token.adoc[leveloffset=+1]
 
