--- a/downstream/modules/automation-hub/proc-configure-automation-hub-server-cli.adoc
+++ b/downstream/modules/automation-hub/proc-configure-automation-hub-server-cli.adoc
@@ -1,11 +1,11 @@
 [id="proc-configure-automation-hub-server-cli"]
 = Configuring Red Hat {HubName} as the primary source for content
 
-Configure Red Hat automation hub as your primary source of content to access Ansible Certified Content Collections. You can configure automation hub in the command-line interface (CLI) or the web console.
+Configure Red Hat {HubName} as your primary source of content to access {CertifiedName}. You can configure {HubName} in the command-line interface (CLI) or the web console.
 
-== Configuring Red Hat automation hub as the primary source for content using the CLI
+== Configuring Red Hat {HubName} as the primary source for content using the CLI
 
-Configure Red Hat automation hub as your primary source of content by using the CLI. To configure automation hub, you must modify the `ansible.cfg` configuration file. With automation hub, you have access to certified, supported collections.
+Configure Red Hat {HubName} as your primary source of content by using the CLI. To configure {HubName}, you must modify the `ansible.cfg` configuration file. With {HubName}, you have access to certified, supported collections.
 
 .Prerequisites
 
@@ -13,7 +13,7 @@ Configure Red Hat automation hub as your primary source of content by using the 
 [IMPORTANT]
 ====
 	Creating a new token revokes any previous tokens 
-	generated for Private Automation Hub. Ensure that you update any Controller or scripts that you created with the previous token.
+	generated for {PrivateHubName}. Ensure that you update any Controller or scripts that you created with the previous token.
 ====
 
 .Procedure
@@ -31,10 +31,10 @@ Configure Red Hat automation hub as your primary source of content by using the 
 -----
 https://__<server_fully_qualified_domain_name>__/api/galaxy/
 -----
-. Optional: Set the `auth_url` option. The community Ansible Galaxy does not require an `auth_url`.
+. Optional: Set the `auth_url` option. The community {Galaxy} does not require an `auth_url`.
 . Set the API token for the {HubName} server.
 
-The following `ansible.cfg` configuration file example shows how to configure multiple servers in prioritized order, with {HubName} configured as your primary source and an Ansible Galaxy server as a secondary source:
+The following `ansible.cfg` configuration file example shows how to configure multiple servers in prioritized order, with {HubName} configured as your primary source and an {Galaxy} server as a secondary source:
 
 .ansible.cfg
 -----
@@ -53,13 +53,13 @@ username=my_user
 password=my_pass
 -----
 <1> Include a trailing slash */* after the server URL.
-<2> Include the `/api/galaxy/` subdirectory in the Ansible Galaxy server URL.
+<2> Include the `/api/galaxy/` subdirectory in the {Galaxy} server URL.
 <3> Include the `/api/galaxy/` subdirectory in the {HubName} server URL.
 
-NOTE: All API URLs must end with a trailing slash */* in order to prevent receiving a 301 redirect.
+NOTE: All API URLs must end with a trailing slash */* to prevent receiving a 301 redirect.
 
-You have now configured automation hub as your primary server using CLI, and can proceed to download and install supported collections.
+You have now configured {HubName} as your primary server using CLI, and can proceed to download and install supported collections.
 
 [role="_additional-resources"]
 .Additional resources
-For more information on server list configuration options and using Ansible Galaxy as an Ansible content source, see the link:https://docs.ansible.com/ansible/latest/galaxy/user_guide.html#configuring-the-ansible-galaxy-client[Ansible Galaxy User Guide].
+For more information about server list configuration options and using {Galaxy} as an Ansible content source, see the link:https://docs.ansible.com/ansible/latest/galaxy/user_guide.html#configuring-the-ansible-galaxy-client[{Galaxy} User Guide].
