--- a/downstream/modules/automation-hub/proc-configure-automation-hub-server-gui.adoc
+++ b/downstream/modules/automation-hub/proc-configure-automation-hub-server-gui.adoc
@@ -1,7 +1,7 @@
 [id="proc-configure-automation-hub-server-gui"]
 == Configuring Red Hat {HubName} as the primary source for content using the web console
 
-Configure Red Hat automation hub as your primary source of content by using the web console. To configure automation hub, you must create a credential and add it to the Organization’s Galaxy Credentials field. With automation hub, you have access to certified, supported collections.
+Configure Red Hat {HubName} as your primary source of content by using the web console. To configure {HubName}, you must create a credential and add it to the Organization's Galaxy Credentials field. With {HubName}, you have access to certified, supported collections.
 
 .Prerequisites
 
@@ -9,12 +9,12 @@ Configure Red Hat automation hub as your primary source of content by using the 
 [IMPORTANT]
 ====
 	Creating a new token revokes any previous tokens 
-	generated for Private Automation Hub. Ensure that you update any Controller or scripts that you created with the previous token.
+	generated for {PrivateHubName}. Ensure that you update any Controller or scripts that you created with the previous token.
 ====
 
 .Procedure
 
-. Navigate to your Automation Controller. 
+. Go to your {ControllerName}. 
 . Create a new credential.
 .. Click btn:[Add] from the **Credentials** screen.
 .. Enter the name for your new credential in the **Name** field.
@@ -28,8 +28,8 @@ Configure Red Hat automation hub as your primary source of content by using the 
 .. Select the organization where you’d like to add your Galaxy credentials.
 .. Click btn:[Edit].
 .. Under Galaxy Credentials, click the **Search** icon.
-.. Select the credential you created for automation hub, and place it at the beginning of the list.
-.. Optional: If you have a secondary source of content, such as Ansible Galaxy, place this credential after the credential you created for automation hub. 
+.. Select the credential you created for {HubName}, and place it at the beginning of the list.
+.. Optional: If you have a secondary source of content, such as {Galaxy}, place this credential after the credential you created for {HubName}. 
 .. Click btn:[Select].
 .. Click btn:[Save].
 
@@ -43,9 +43,9 @@ To validate the credential, update an existing source control management (SCM)-b
 
 If the status of the project is **Successful**, then the credential is valid. 
 
-You have now configured automation hub as your primary server using the web console, and you can proceed to download and install supported collections.
+You have now configured {HubName} as your primary server using the web console, and you can proceed to download and install supported collections.
 
 [role="_additional-resources"]
 .Additional resources
-. For more information on server list configuration options and using Ansible Galaxy as an Ansible content source, see the link:https://docs.ansible.com/ansible/latest/galaxy/user_guide.html#configuring-the-ansible-galaxy-client[Ansible Galaxy User Guide].
-. For more information on creating and using credentials, see the link:https://docs.ansible.com/automation-controller/4.2.1/html/userguide/credentials.html[Credentials] section of Automation Controller User Guide v4.2.1.
+. For more information about server list configuration options and using {Galaxy} as an Ansible content source, see the link:https://docs.ansible.com/ansible/latest/galaxy/user_guide.html#configuring-the-ansible-galaxy-client[{Galaxy} User Guide].
+. For more information about creating and using credentials, see the link:https://docs.ansible.com/automation-controller/4.2.1/html/userguide/credentials.html[Credentials] section of {ControllerName} User Guide v4.2.1.
