--- a/downstream/modules/automation-hub/proc-using-content-signing-services-in-pah.adoc
+++ b/downstream/modules/automation-hub/proc-using-content-signing-services-in-pah.adoc
@@ -1,6 +1,6 @@
 [id="proc-using-content-signing-services-in-pah"]
 
-= Using content signing services in private automation hub
+= Using content signing services in {PrivateHubName}
 
 After you have configured content signing on your {PrivateHubName}, you can manually sign a new collection or replace an existing signature with a new one so that users who want to download a specific collection have the assurance that the collection is intended for them and has not been modified after certification.
 
