--- a/downstream/modules/automation-hub/proc-set-community-remote.adoc
+++ b/downstream/modules/automation-hub/proc-set-community-remote.adoc
@@ -16,7 +16,7 @@ See example below.
 .Requirements.yml example
 -----
 collections:
-  # Install a collection from Ansible Galaxy.
+  # Install a collection from {Galaxy}.
   - name: community.aws
     version: 5.2.0
     source: https://galaxy.ansible.com
