--- a/downstream/modules/platform/proc_configuring-tls-with-aap-operator.adoc
+++ b/downstream/modules/platform/proc_configuring-tls-with-aap-operator.adoc
@@ -11,7 +11,7 @@ ways:
 Add the prefix proc- or proc_ to the file name.
 Add the following attribute before the module ID:
 ////
-:_content-type: PROCEDURE
+:_mod-docs-content-type: PROCEDURE
 
 [id="proc_configuring-tls-with-aap-operator_{context}"]
 = configuring-tls-with-aap-operator
