Replace plain text with attributes for content in the navigator module
This PR is specific to the 2.3 branch and version of our docs. The main PR is #1106

Affects the following titles:

./navigator-guide/navigator
./dev-guide/navigator
Replace plain-text with attributes where appropriate

https://issues.redhat.com/browse/AAP-19894

--- a/downstream/modules/navigator/proc-installing-navigator-rhel-rpm.adoc
+++ b/downstream/modules/navigator/proc-installing-navigator-rhel-rpm.adoc
@@ -7,7 +7,7 @@
 
 [role="_abstract"]
 
-You can install {Navigator} on Red Hat Enterprise Linux (RHEL) from an RPM.
+You can install {Navigator} on {RHEL} (RHEL) from an RPM.
 
 .Prerequisites
 
@@ -45,4 +45,4 @@ $ ansible-navigator --help
 
 The following example demonstrates a successful installation:
 
-image::navigator-stdout.png[Automation content navigator successful installation]
+image::navigator-stdout.png[{Navigator} successful installation]
