--- a/downstream/modules/navigator/proc-installing-navigator-rhel-tar.adoc
+++ b/downstream/modules/navigator/proc-installing-navigator-rhel-tar.adoc
@@ -7,7 +7,7 @@
 
 [role="_abstract"]
 
-You can install {Navigator} on Red Hat Enterprise Linux (RHEL) from a tar file.
+You can install {Navigator} on {RHEL} (RHEL) from a tar file.
 
 .Prerequisites
 
