--- a/downstream/modules/navigator/proc-review-ee-tui.adoc
+++ b/downstream/modules/navigator/proc-review-ee-tui.adoc
@@ -21,7 +21,7 @@ You can review your {ExecEnvNameStart} with the {Navigator} text-based user inte
 $ ansible-navigator images
 ----
 +
-image::navigator-images-list.png[List of automation execution environments]
+image::navigator-images-list.png[List of {ExecEnvName}]
 
 . Type the number of the {ExecEnvNameSing} you want to delve into for more details.
 +
