--- a/downstream/modules/navigator/proc-installing-navigator-rhel-pip.adoc
+++ b/downstream/modules/navigator/proc-installing-navigator-rhel-pip.adoc
@@ -7,7 +7,7 @@
 
 [role="_abstract"]
 
-You can install {Navigator} on Red Hat Enterprise Linux (RHEL) with `pip`.
+You can install {Navigator} on {RHEL} (RHEL) with `pip`.
 
 
 .Procedure
