Replace plain text with attributes for content in the platform module
This PR is specific to the 2.3 branch and version of our docs. The main PR is #1119

Replace plain-text with attributes where appropriate

https://issues.redhat.com/browse/AAP-19894

--- a/downstream/assemblies/analytics/assembly-evaluating-automation-return.adoc
+++ b/downstream/assemblies/analytics/assembly-evaluating-automation-return.adoc
@@ -7,9 +7,9 @@ ifdef::context[:parent-context: {context}]
 
 :context: assembly-evaluating-automation-return-ctxt
 
-= About Automation Calculator
+= About {calculator}
 
-The automation calculator provides graphs, metrics and calculations that help you determine the total savings on your investment in automated processes.
+The {calculator} provides graphs, metrics and calculations that help you determine the total savings on your investment in automated processes.
 
 .Automation savings
 
