--- a/downstream/assemblies/catalog/assembly-installing-receptor.adoc
+++ b/downstream/assemblies/catalog/assembly-installing-receptor.adoc
@@ -43,17 +43,17 @@ Organization Administrator
 
 |===
 
-.Red Hat Enterprise Linux physical or virtual machine requirements
+.{RHEL} physical or virtual machine requirements
 
 [cols="50%,50%"]
 |===
 | System  | Requirements
 
-| Red Hat Enterprise Linux |
+| {RHEL} |
 
- Red Hat Enterprise Linux (RHEL) 7
+ {RHEL} (RHEL) 7
 
- Red Hat Enterprise Linux (RHEL) 8
+ {RHEL} (RHEL) 8
 
  A valid subscription is required.
 
