--- a/downstream/assemblies/catalog/assembly-order-process.adoc
+++ b/downstream/assemblies/catalog/assembly-order-process.adoc
@@ -52,7 +52,7 @@ Set an order process that will apply to a single product.
 . Expand the drop-down menu and select an order process.
 
 +
-NOTE: Ansible Automation Platform currently only supports one order process per product provision.
+NOTE: {PlatformNameShort} currently only supports one order process per product provision.
 
 . Click btn:[Save].
 
