--- a/downstream/assemblies/catalog/assembly-planning-ITSM-integration.adoc
+++ b/downstream/assemblies/catalog/assembly-planning-ITSM-integration.adoc
@@ -1,8 +1,8 @@
 [id="assembly-planning-ITSM-integration"]
 
-= Planning your ITSM integration with Automation Services Catalog
+= Planning your ITSM integration with {CatalogName}
 
-Plan for the updates and modifications required to your Ansible Automation Platform and playbook inventory to integrate with your ITSM system. Some changes will require specific levels of administrative permissions in both Ansible Tower and Automation Services Catalog.
+Plan for the updates and modifications required to your {PlatformNameShort} and playbook inventory to integrate with your ITSM system. Some changes will require specific levels of administrative permissions in both Ansible Tower and {CatalogName}.
 
 This section will detail the exact roles required to perform updates, and the artifacts you will need to modify.
 
