--- a/downstream/assemblies/platform/assembly-mesh-design-patterns.adoc
+++ b/downstream/assemblies/platform/assembly-mesh-design-patterns.adoc
@@ -7,10 +7,10 @@ ifdef::context[:parent-context: {context}]
 :context: design-patterns
 
 [role="_abstract"]
-The automation mesh topologies in this section provide examples you can use to design a mesh deployment in your environment. Examples range from a simple, hydrid node deployment to a complex pattern that deploys numerous {ControllerName} instances, employing several execution and hop nodes.
+The {MeshName} topologies in this section provide examples you can use to design a mesh deployment in your environment. Examples range from a simple, hydrid node deployment to a complex pattern that deploys numerous {ControllerName} instances, employing several execution and hop nodes.
 
 .Prerequisites
-* You reviewed conceptual information on node types and relationsips
+* You reviewed conceptual information on node types and relationships
 
 [NOTE]
 ====
