--- a/downstream/modules/aap-on-aws/con-aap-aws-about.adoc
+++ b/downstream/modules/aap-on-aws/con-aap-aws-about.adoc
@@ -26,5 +26,5 @@ The following {PlatformName} components are available on {AAPonAWSNameShort}:
 
 [NOTE]
 ====
-Automation mesh is not available on {AAPonAWSNameShort}.
+{AutomationMeshStart} is not available on {AAPonAWSNameShort}.
 ====
