--- a/downstream/modules/aap-on-azure/con-aap-azure-about.adoc
+++ b/downstream/modules/aap-on-azure/con-aap-azure-about.adoc
@@ -20,5 +20,5 @@ The following Red Hat Automation Platform components are available on {AAPonAzur
 
 [NOTE]
 ====
-Automation mesh is not available on {AAPonAzureNameShort}.
+{AutomationMeshStart} is not available on {AAPonAzureNameShort}.
 ====
