--- a/downstream/modules/aap-on-azure/proc-azure-create-service-principal.adoc
+++ b/downstream/modules/aap-on-azure/proc-azure-create-service-principal.adoc
@@ -32,7 +32,7 @@ The output displays the _appID_ and _tenant_ keys for the service principal:
   "tenant": "xxxxxxx-xxx-xxxx"
 }
 -----
-. Store the service principal details securely, as they are displayed only when you create the secret. You will need them when you deploy Automation controller.
+. Store the service principal details securely, as they are displayed only when you create the secret. You will need them when you deploy {ControllerName}.
 
 == Maintaining your service principals
 
