--- a/downstream/modules/catalog/proc-preparing-worker-installer.adoc
+++ b/downstream/modules/catalog/proc-preparing-worker-installer.adoc
@@ -6,7 +6,7 @@
 
 
 [role="_abstract"]
-Installing the automation services catalog worker requires adding `host vars` in the {PlatformName} installer used for installation parameters. The 'host_vars' files store parameter information for each host you specify. Refer to the parameters table below for all available and required parameters.
+Installing the {CatalogName} worker requires adding `host vars` in the {PlatformName} installer used for installation parameters. The 'host_vars' files store parameter information for each host you specify. Refer to the parameters table below for all available and required parameters.
 
 .Available `host_vars` parameters
 
@@ -105,13 +105,13 @@ You can now proceed to run the installer.
 # ./setup.sh
 -----
 
-Running the automation services catalog worker will create an application and an application token, install the necessary packages, connect to cloud.redhat.com, and start the service.
+Running the {CatalogName} worker will create an application and an application token, install the necessary packages, connect to cloud.redhat.com, and start the service.
 
 
 
 
 .Verification
-You can verify that the automation services catalog worker installed and connected to your automation service catalog, and that jobs ordered in automation service catalog run on automation controller.
+You can verify that the {CatalogName} worker installed and connected to your automation service catalog, and that jobs ordered in automation service catalog run on {ControllerName}.
 
 .Prerequisites
 You are a Catalog Administrator and can create portfolios and add products to them.
@@ -121,4 +121,4 @@ You are a Catalog Administrator and can create portfolios and add products to th
 . Click btn:[Platforms].
 . Locate the platforms associated with the hosts you created for your `host_vars`.
 . Click on a platform.
-. Verify that *inventory* and *templates* from your automation controller are included.
+. Verify that *inventory* and *templates* from your {ControllerName} are included.
