--- a/downstream/modules/catalog/proc_Set_order_process_portfolio.adoc
+++ b/downstream/modules/catalog/proc_Set_order_process_portfolio.adoc
@@ -16,6 +16,6 @@ Set an order process that will apply to all products in a portfolio.
 . Expand the drop-down menu and select an order process.
 
 +
-NOTE: Ansible Automation Platform currently only supports one order process per portfolio.
+NOTE: {PlatformNameShort} currently only supports one order process per portfolio.
 
 . Click btn:[Save].
