--- a/downstream/modules/platform/con-aap-installation-on-disconnected-rhel.adoc
+++ b/downstream/modules/platform/con-aap-installation-on-disconnected-rhel.adoc
@@ -6,7 +6,7 @@
 = {PlatformNameShort} installation on disconnected RHEL
 
 [role="_abstract"]
-Install {PlatformNameShort} {ControllerName} and a private automation hub, with an installer-managed database located on the {ControllerName} without an Internet connection.
+Install {PlatformNameShort} {ControllerName} and a {PrivateHubName}, with an installer-managed database located on the {ControllerName} without an Internet connection.
 
 == Prerequisites
 
@@ -14,7 +14,7 @@ To install {PlatformNameShort} on a disconnected network, complete the following
 
 * Create a subscription manifest.
 * Download the {PlatformNameShort} setup bundle.
-* Create DNS records for {ControllerName} and private automation hub servers.
+* Create DNS records for {ControllerName} and {PrivateHubName} servers.
 
 NOTE: The setup bundle includes additional components that make installing {PlatformNameShort} easier in a disconnected environment. These include the {PlatformNameShort} RPMs and the default {ExecEnvShort} (EE) images.
 
