--- a/downstream/modules/platform/con-automation-mesh-node-types.adoc
+++ b/downstream/modules/platform/con-automation-mesh-node-types.adoc
@@ -4,7 +4,7 @@
 = Control and execution planes
 
 [role="_abstract"]
-Automation mesh makes use of unique node types to create both the *control* and *execution* plane.  Learn more about the control and execution plane and their node types before designing your automation mesh topology.
+{AutomationMeshStart} makes use of unique node types to create both the *control* and *execution* plane. Learn more about the control and execution plane and their node types before designing your {MeshName} topology.
 
 == Control plane
 
