--- a/downstream/modules/platform/proc-completing-post-installation-tasks.adoc
+++ b/downstream/modules/platform/proc-completing-post-installation-tasks.adoc
@@ -52,6 +52,6 @@ On {ControllerName}
 ----
 $ sudo -i
 # vi /etc/pki/ca-trust/source/anchors/automationhub-root.crt
-(paste the contents of the root.crt file from the private automation hub into the new file and write to disk)
+(paste the contents of the root.crt file from the {PrivateHubName} into the new file and write to disk)
 # update-ca-trust
 ----
