--- a/downstream/modules/platform/proc-creating-collection-namespace.adoc
+++ b/downstream/modules/platform/proc-creating-collection-namespace.adoc
@@ -6,7 +6,7 @@ The namespace of the collection must exist for the import to be successful. You 
 
 .Procedure
 
-. Login to private automation hub web console.
+. Login to {PrivateHubName} web console.
 
 . Navigate to menu:Collections[Namespaces].
 
@@ -35,13 +35,13 @@ This opens the 'My Imports' page.  You can see the status of the import and vari
 
 === Importing the collection tarball using ansible-galaxy via CLI
 
-You can import collections into the private automation hub by using the command-line interface rather than the GUI.
+You can import collections into the {PrivateHubName} by using the command-line interface rather than the GUI.
 
-. Copy the collection tarballs to the private automation hub.
+. Copy the collection tarballs to the {PrivateHubName}.
 +
-. Log in to the private automation hub server via SSH.
+. Log in to the {PrivateHubName} server through SSH.
 +
-. Add the self-signed root CA cert to the trust store on the automation hub.
+. Add the self-signed root CA cert to the trust store on the {HubName}.
 +
 ----
 # cp /etc/pulp/certs/root.crt \
