--- a/downstream/modules/platform/proc-update-ee-image-locations.adoc
+++ b/downstream/modules/platform/proc-update-ee-image-locations.adoc
@@ -5,10 +5,10 @@
 
 [id="updating-ee-image-locations_{context}"]
 
-= Updating execution environment image locations
+= Updating {ExecEnvShort} image locations
 
 [role="_abstract"]
-If your {PrivateHubName} was installed separately, you can update your execution environment image locations to point to your {PrivateHubName}. Use this procedure to update your execution environment image locations. 
+If your {PrivateHubName} was installed separately, you can update your {ExecEnvShort} image locations to point to your {PrivateHubName}. Use this procedure to update your {ExecEnvShort} image locations. 
 
 .Procedure
 . Navigate to the directory containing `setup.sh`
@@ -49,7 +49,7 @@ $ ./setup.sh
 
 . Log into {PlatformNameShort} as a user with system administrator access. 
 . Navigate to menu:Administration[Execution Environments].
-. In the Image column, confirm that the execution environment image location has changed from the default value of `<registry url>/ansible-automation-platform-<version>/<image name>:<tag>` to `<automation hub url>/<image name>:<tag>`. 
+. In the Image column, confirm that the {ExecEnvShort} image location has changed from the default value of `<registry url>/ansible-automation-platform-<version>/<image name>:<tag>` to `<automation hub url>/<image name>:<tag>`. 
 
 
 
