--- a/downstream/modules/platform/ref-hub-variables.adoc
+++ b/downstream/modules/platform/ref-hub-variables.adoc
@@ -166,7 +166,7 @@ If {HubName} should validate certificate when requesting itself because by defau
 Default = `false`.
 | *`automationhub_upgrade`* | *Deprecated*
 
-For Ansible Automation Platform 2.2.1 and later, the value of this has been fixed at true.
+For {PlatformNameShort} 2.2.1 and later, the value of this has been fixed at true.
 
 {HubNameStart} always updates with the latest packages.
 | *`generate_automationhub_token`* a| If upgrading from {PlatformName} 2.0 or earlier, you must either:
