--- a/downstream/modules/platform/ref-standalone-controller-ext-db.adoc
+++ b/downstream/modules/platform/ref-standalone-controller-ext-db.adoc
@@ -2,7 +2,7 @@
 
 [id="standalone-controller-ext-db_{context}"]
 
-= Example inventory file for a standalone automation controller with an external managed database
+= Example inventory file for a standalone {ControllerName} with an external managed database
 
 
 [role="_abstract"]
