--- a/downstream/titles/catalog/onboarding/master.adoc
+++ b/downstream/titles/catalog/onboarding/master.adoc
@@ -12,7 +12,7 @@ include::aap-common/making-open-source-more-inclusive.adoc[leveloffset=+1]
 
 == About Automation Service Catalog
 
-Automation Service Catalog is a service within the Red Hat Ansible Automation Platform.
+Automation Service Catalog is a service within the {PlatformName}.
 
 Automation Service Catalog allows customers to organize and govern product catalog sources on Ansible Tower across various environments.
 
@@ -93,7 +93,7 @@ In this process, we will first create a group for Catalog Administrators:
 
 Create Catalog Administrator group:
 
-. Navigate to the “Red Hat Ansible Automation Platform” tile then to Settings ➔ User Access Management.
+. Go to the “{PlatformName}” tile then to Settings ➔ User Access Management.
 . Select the “Add group” button
 . Enter group name “Catalog Administrator” and set the description to “Catalog Administrators have complete access to all objects in the Catalog Service”
 . Press *Next*.
