--- a/downstream/titles/catalog/support-matrix/master.adoc
+++ b/downstream/titles/catalog/support-matrix/master.adoc
@@ -17,7 +17,7 @@ include::aap-common/making-open-source-more-inclusive.adoc[leveloffset=+1]
 
 == Dependent Products Support Matrix
 
-Automation Services Catalog is dependent on and integrated with Ansible Tower server in the Ansible Automation Platform. The following table details supported versions of Ansible Tower server for use with *all* versions of Automation Services Catalog.
+Automation Services Catalog is dependent on and integrated with Ansible Tower server in the {PlatformNameShort}. The following table details supported versions of Ansible Tower server for use with *all* versions of Automation Services Catalog.
 
 
 .Ansible Tower
