--- a/downstream/titles/dev-guide/master.adoc
+++ b/downstream/titles/dev-guide/master.adoc
@@ -15,7 +15,7 @@ include::aap-common/making-open-source-more-inclusive.adoc[leveloffset=+1]
 
 .Using {ExecEnvName} to automate content within the {PlatformName}
 
-You can use Execution Environments as reproducible, portable, consistent and shareable container images. They control all of the dependencies of an Ansible Automation Platform job’s runtime environment from system dependencies, Python dependencies, Ansible versions, and Ansible content in the form of Collections.
+You can use Execution Environments as reproducible, portable, consistent and shareable container images. They control all of the dependencies of an {PlatformNameShort} job's runtime environment from system dependencies, Python dependencies, Ansible versions, and Ansible content in the form of Collections.
 
 
 
