--- a/downstream/titles/hub/high-availability/master.adoc
+++ b/downstream/titles/hub/high-availability/master.adoc
@@ -2,7 +2,7 @@
 :numbered:
 include::attributes/attributes.adoc[]
 
-= Deploying a high availability automation hub
+= Deploying a high availability {HubName}
 
 This guide provides an overview of the requirements and procedures for a high availability deployment of your {HubName}.
 
