--- a/downstream/titles/hub/install/master.adoc
+++ b/downstream/titles/hub/install/master.adoc
@@ -6,7 +6,7 @@ include::attributes/attributes.adoc[]
 
 = Installing and upgrading {PrivateHubName}
 
-You can install Private Automation Hub or upgrade to a new version on a Red Hat Enterprise Linux (RHEL) 8.4 or later, or RHEL 9 or later virtual or physical machine with a valid Red Hat Ansible Automation Platform subscription.
+You can install Private Automation Hub or upgrade to a new version on a {RHEL} (RHEL) 8.4 or later, or RHEL 9 or later virtual or physical machine with a valid {PlatformName} subscription.
 
 include::aap-common/making-open-source-more-inclusive.adoc[leveloffset=+1]
 
@@ -49,7 +49,7 @@ These instructions are only for the installation of {PlatformNameShort}.
 
 == Installing online or offline
 
-Choose the {PlatformNameShort} installer you need to install {PrivateHubName} based on your Red Hat Enterprise Linux environment internet connectivity.
+Choose the {PlatformNameShort} installer you need to install {PrivateHubName} based on your {RHEL} environment internet connectivity.
 Review the following scenarios and determine which {PlatformNameShort} installer meets your needs.
 
 [NOTE]
@@ -59,7 +59,7 @@ You must have a valid Red Hat customer account to access {PlatformNameShort} ins
 
 .Installing with internet access
 
-Install {PrivateHubName} using the {PlatformNameShort} installer if your Red Hat Enterprise Linux environment is connected to the internet.
+Install {PrivateHubName} using the {PlatformNameShort} installer if your {RHEL} environment is connected to the internet.
 Installing with internet access will retrieve the latest required repositories, packages, and dependencies.
 
 . Navigate to link:https://access.redhat.com/downloads/content/480[Download Red Hat Ansible Automation Platform].
@@ -74,7 +74,7 @@ $ tar xvzf ansible-automation-platform-setup-<latest-version>.tar.gz
 .Installing without internet access
 
 Install {PrivateHubName} using the {PlatformNameShort} *Bundle* installer if you are unable to access the internet, or would prefer not to install separate components and dependencies from online repositories.
-Access to Red Hat Enterprise Linux repositories is still needed.
+Access to {RHEL} repositories is still needed.
 All other dependencies are included in the tar archive.
 
 . Navigate to link:https://access.redhat.com/downloads/content/480[Download Red Hat Ansible Automation Platform].
