--- a/downstream/assemblies/hub/assembly-installing-high-availability-hub.adoc
+++ b/downstream/assemblies/hub/assembly-installing-high-availability-hub.adoc
@@ -1,6 +1,6 @@
 [id="installing-high-availability-hub"]
 
-= Installing a high availability automation hub
+= Installing a high availability {HubName}
 
 [role="_abstract"]
 Configure the {PlatformNameShort} installer to install {HubName} in a highly available (HA) configuration. Install HA {HubName} on SELinux by creating mount points and adding the appropriate SELinux contexts to your {PlatformNameShort} environment.
