--- a/downstream/assemblies/platform/assembly-planning-mesh.adoc
+++ b/downstream/assemblies/platform/assembly-planning-mesh.adoc
@@ -5,13 +5,13 @@ ifdef::context[:parent-context: {context}]
 
 
 [id="assembly-planning-mesh"]
-= Planning for automation mesh in your {PlatformName} environment
+= Planning for {MeshName} in your {PlatformName} environment
 
 :context: planning-mesh
 
 
 [role="_abstract"]
-The following topics contain information to help plan an automation mesh deployment in your {PlatformNameShort} environment. The subsequent sections explain the concepts that comprise automation mesh in addition to providing examples on how you can design automation mesh topologies. Simple to complex topology examples are included to illustrate the various ways you can deploy automation mesh.
+The following topics contain information to help plan an {MeshName} deployment in your {PlatformNameShort} environment. The following sections explain the concepts that comprise {MeshName} in addition to providing examples on how you can design {MeshName} topologies. Simple to complex topology examples are included to illustrate the various ways you can deploy {MeshName}.
 
 
 include::platform/con-about-automation-mesh.adoc[leveloffset=+1]
