--- a/downstream/assemblies/platform/assembly-platform-non-inst-database.adoc
+++ b/downstream/assemblies/platform/assembly-platform-non-inst-database.adoc
@@ -16,7 +16,7 @@ You can use these instructions to install {PlatformName} (both {ControllerName} 
 * You are installing on a machine that meets base system requirements.
 * You have created a Red Hat Registry Service Account, following the instructions in the https://access.redhat.com/RegistryAuthentication#creating-registry-service-accounts-6[Creating Registry Service Accounts guide].
 * A container registry service is required to install {PlatformNameShort}.
-Access to a container registry enables you to load automation execution environments onto the {PlatformNameShort}, giving you a consistent and containerized environment for executing Ansible playbooks and roles.
+Access to a container registry enables you to load {ExecEnvName} onto the {PlatformNameShort}, giving you a consistent and containerized environment for executing Ansible playbooks and roles.
 By default, the {PlatformNameShort} uses `registry.redhat.io`, which requires a Red Hat registry service account.
 See the https://access.redhat.com/RegistryAuthentication#creating-registry-service-accounts-6[Creating Registry Service Accounts] guide to create a registry service account.
 
