--- a/downstream/assemblies/platform/assembly-supported-attributes-custom-notifications.adoc
+++ b/downstream/assemblies/platform/assembly-supported-attributes-custom-notifications.adoc
@@ -18,7 +18,7 @@ This section describes the list of supported job attributes and the proper synta
 
 * `allow_simultaneous` - (boolean) indicates if multiple jobs can run simultaneously from the JT associated with this job
 
-* `controller_node` - (string) the instance that managed the isolated execution environment
+* `controller_node` - (string) the instance that managed the isolated {ExecEnvShort}
 
 * `created` - (datetime) timestamp when this job was created
 
