--- a/downstream/modules/platform/con-aap-example-architecture.adoc
+++ b/downstream/modules/platform/con-aap-example-architecture.adoc
@@ -3,7 +3,7 @@
 [id='aap_example_architecture_{context}']
 = Example {PlatformNameShort} architecture
 
-The {PlatformName} {PlatformVers} reference architecture provides an example setup of a standard deployment of {PlatformNameShort} using automation mesh on Red Hat Enterprise Linux. The deployment shown takes advantage of the following key components to provide a simple, secure and flexible method of handling your automation workloads, a central location for content collections, and automated resolution of IT requests.
+The {PlatformName} {PlatformVers} reference architecture provides an example setup of a standard deployment of {PlatformNameShort} using {MeshName} on {RHEL}. The deployment shown takes advantage of the following key components to provide a simple, secure and flexible method of handling your automation workloads, a central location for content collections, and automated resolution of IT requests.
 
 {ControllerNameStart}:: Provides the control plane for automation through its UI, Restful API, RBAC workflows and CI/CD integrations.
 {AutomationMeshStart}:: Is an overlay network that provides the ability to ease the distribution of work across a large and dispersed collection of workers through nodes that establish peer-to-peer connections with each other using existing networks.
@@ -15,10 +15,10 @@ The architecture for this example consists of the following:
 
 * A two node {ControllerName} cluster
 * An optional hop node to connect {ControllerName} to execution nodes
-* A two node automation hub cluster
+* A two node {HubName} cluster
 //* A single node EDA controller cluster
 * A single PostgreSQL database connected to the {ControllerName} and {HubName}
-* Two execution nodes per automation controller cluster
+* Two execution nodes per {ControllerName} cluster
 
 .Example {PlatformNameShort} {PlatformVers} architecture
 image::aap_ref_arch_2.3.png[Reference architecture for an example setup of a standard Ansible Automation Platform deployment]
