--- a/downstream/modules/platform/proc-approving-the-imported-collection.adoc
+++ b/downstream/modules/platform/proc-approving-the-imported-collection.adoc
@@ -7,13 +7,13 @@ After you have imported collections with either the GUI or the CLI method, you m
 
 .Procedure
 
-. Login to private automation hub web console.
+. Log in to {PrivateHubName} web console.
 
 . Go to menu:Collections[Approval].
 
 . Click btn:[Approve] for the collection you wish to approve.
 
-. The collection is now available for use in your private automation hub.
+. The collection is now available for use in your {PrivateHubName}.
 
 NOTE: The collection is added to the "Published" repository regardless of its source.
 
@@ -23,7 +23,7 @@ Recommended collections depend on your use case. Ansible and Red Hat provide lin
 
 == Custom Execution Environments
 
-Use the ansible-builder program to create custom execution environment images. For disconnected environments, custom EE images can be built in the following ways:
+Use the ansible-builder program to create custom {ExecEnvShort} images. For disconnected environments, custom EE images can be built in the following ways:
 
 * Build an EE image on an internet-facing system and import it to the
 disconnected environment
@@ -32,7 +32,7 @@ disconnected environment
 
 === Transferring a Custom EE Images Across a Disconnected Boundary
 
-A custom execution environment image can be built on an internet-facing machine using the existing documentation.  Once an execution environment has been created it is available in the local podman image cache. You can then transfer the custom EE image across a disconnected boundary. To transfer the custom EE image across a disconnected boundary, first save the image:
+A custom {ExecEnvShort} image can be built on an internet-facing machine using the existing documentation. Once an {ExecEnvShort} has been created it is available in the local Podman image cache. You can then transfer the custom EE image across a disconnected boundary. To transfer the custom EE image across a disconnected boundary, first save the image:
 
 . Save the image:
 ----
