--- a/downstream/modules/platform/proc-verify-controller-installation.adoc
+++ b/downstream/modules/platform/proc-verify-controller-installation.adoc
@@ -3,7 +3,7 @@
 = Verifying installation of {ControllerName}
 
 [role="_abstract"]
-Verify that you installed automation controller successfully by logging in with the admin credentials you inserted in the `inventory` file.
+Verify that you installed {ControllerName} successfully by logging in with the admin credentials you inserted in the `inventory` file.
 
 .Procedure
 . Navigate to the IP address specified for the {ControllerName} node in the `inventory` file.
