--- a/downstream/modules/platform/ref-deprovision-node.adoc
+++ b/downstream/modules/platform/ref-deprovision-node.adoc
@@ -2,11 +2,11 @@
 
 [id="ref-deprovisioned-nodes_{context}"]
 
-= Deprovisioned automation mesh nodes inventory file example
+= Deprovisioned {MeshName} nodes inventory file example
 
 
 [role="_abstract"]
-This example inventory file deprovisions two nodes from an automation mesh configuration.
+This example inventory file deprovisions two nodes from an {MeshName} configuration.
 
 
 -----
