--- a/downstream/titles/aap-planning-guide/master.adoc
+++ b/downstream/titles/aap-planning-guide/master.adoc
@@ -12,7 +12,7 @@ include::attributes/attributes.adoc[]
 
 Thank you for your interest in {PlatformName}. {PlatformNameShort} is a commercial offering that helps teams manage complex multi-tier deployments by adding control, knowledge, and delegation to Ansible-powered environments.
 
-Use the information in this guide to plan your Red Hat Ansible Automation Platform installation.
+Use the information in this guide to plan your {PlatformName} installation.
 
 include::aap-common/making-open-source-more-inclusive.adoc[leveloffset=+1]
 include::platform/assembly-planning-installation.adoc[leveloffset=+1]
