--- a/downstream/titles/analytics/job-explorer/master.adoc
+++ b/downstream/titles/analytics/job-explorer/master.adoc
@@ -5,7 +5,7 @@
 :analytics_automation_savings:
 
 [[analytics_automation_savings]]
-= Evaluating your Automation controller job runs using the Job Explorer
+= Evaluating your {ControllerName} job runs using the {explorer}
 
 include::aap-common/making-open-source-more-inclusive.adoc[leveloffset=+1]
 
