--- a/downstream/titles/catalog/getting-started/master.adoc
+++ b/downstream/titles/catalog/getting-started/master.adoc
@@ -12,7 +12,7 @@ include::aap-common/making-open-source-more-inclusive.adoc[leveloffset=+1]
 
 == About {CatalogName}
 
-{CatalogNameStart} is a service within the Red Hat Ansible Automation Platform.
+{CatalogNameStart} is a service within the {PlatformName}.
 {CatalogNameStart} allows customers to organize and govern product catalog sources on Ansible Tower across various environments.
 
 Using {CatalogName} you can:
