--- a/downstream/titles/hub/configuring-private-hub-rh-certified/master.adoc
+++ b/downstream/titles/hub/configuring-private-hub-rh-certified/master.adoc
@@ -1,6 +1,6 @@
 
 :imagesdir: images
-= Managing Red Hat Certified and Ansible Galaxy collections in automation hub
+= Managing Red Hat Certified and {Galaxy} collections in {HubName}
 :numbered:
 :experimental:
 
