--- a/downstream/titles/hub/lifecycle/master.adoc
+++ b/downstream/titles/hub/lifecycle/master.adoc
@@ -7,17 +7,17 @@ include::aap-common/making-open-source-more-inclusive.adoc[leveloffset=+1]
 
 == Overview
 
-As part of an Red Hat Ansible Automation Platform subscription, customers have access to a supported version of Automation Hub. Red Hat provides a published product life cycle for Automation Hub so that customers and partners can properly plan, deploy, support, and maintain their private Automation Hub(s) that they use with the Ansible Automation Platform.
-This life cycle encompasses stated time periods for each version of Automation Hub, starting with 4.2. The life cycle for each version of Automation Hub is split into production phases, each identifying the various levels of maintenance over a period of time from the initial release date. While multiple versions of Automation Hub will be supported at any one time, note that this life cycle applies to each specific version of Automation Hub (4.2, 4.3 and so on).
+As part of an {PlatformName} subscription, customers have access to a supported version of {HubName}. Red Hat provides a published product life cycle for {HubName} so that customers and partners can properly plan, deploy, support, and maintain their {PrivateHubName}s that they use with the {PlatformNameShort}.
+This life cycle encompasses stated time periods for each version of {HubName}, starting with 4.2. The life cycle for each version of {HubName} is split into production phases, each identifying the various levels of maintenance over a period of time from the initial release date. While multiple versions of {HubName} will be supported at any one time, note that this life cycle applies to each specific version of {HubName} (4.2, 4.3 and so on).
 
-Customers are expected to upgrade their Automation Hub environments to the most current supported version of the product in a timely fashion. Bug fixes and feature-work will target only the latest versions of the product, though some allowance may be given for high security risk items.
+Customers are expected to upgrade their {HubName} environments to the most current supported version of the product in a timely fashion. Bug fixes and feature-work will target only the latest versions of the product, though some allowance may be given for high security risk items.
 
 
 .Glossary
 
 * *Maintenance* - Security and Application Bug fixes.
 * *Updates* - Application Feature Enhancements
-* *Private Automation Hub* - Refers to the customer installable Automation Hub as provided via Subscription Manager.
+* *Private Automation Hub* - Refers to the customer installable {HubName} as provided via Subscription Manager.
 
 == Life cycle dates
 
@@ -34,7 +34,7 @@ Customers are expected to upgrade their Automation Hub environments to the most 
 == Scope of coverage
 
 Support will be provided for use according to the published Scope of Coverage in Appendix 1 of the https://www.redhat.com/licenses/Enterprise_Agreement_WebversionGlobal_English_20180416.pdf[Red Hat Enterprise Agreement].
-To encourage the rapid adoption of new technologies while keeping the high standard of stability inherent in Red Hat enterprise product, the product life cycle for Red Hat Automation Hub is divided into three phases of maintenance, described below.
+To encourage the rapid adoption of new technologies while keeping the high standard of stability inherent in Red Hat enterprise product, the product life cycle for Red Hat {HubName} is divided into three phases of maintenance, described below.
 
 == Production phases
 
@@ -47,7 +47,7 @@ During the Full Support Phase, Red Hat will provide:
 * Select enhanced software functionality
 
 This will be delivered in the form of sub-minor releases.
-A release of Automation Hub is supported under the Full Support Phase for 6 months after its initial release.
+A release of {HubName} is supported under the Full Support Phase for 6 months after its initial release.
 
 .Maintenance Support 1 Phase
 
@@ -58,7 +58,7 @@ During the Maintenance Support 1 Phase, Red Hat will provide:
 
 These fixes will be delivered in the form of sub-minor releases.
 
-A release of Automation Hub is supported under the Maintenance Support 1 Phase for 6 months after it leaves the Full Support Phase.
+A release of {HubName} is supported under the Maintenance Support 1 Phase for 6 months after it leaves the Full Support Phase.
 
 .Maintenance Support 2 Phase
 
@@ -68,5 +68,5 @@ During the Maintenance Support 2 Phase, Red Hat will provide:
 
 These fixes will be delivered in the form of sub-minor releases.
 
-A release of Automation Hub is supported under the Maintenance Support 2 Phase for 6 months after it leaves the Maintenance Support 1 Phase.
-All updates are provided at Red Hat’s discretion.
+A release of {HubName} is supported under the Maintenance Support 2 Phase for 6 months after it leaves the Maintenance Support 1 Phase.
+All updates are provided at Red Hat's discretion.
