--- a/downstream/titles/worker-install/master.adoc
+++ b/downstream/titles/worker-install/master.adoc
@@ -8,13 +8,13 @@ include::attributes/attributes.adoc[]
 
 
 // Book Title
-= Installing the automation services catalog worker
+= Installing the {CatalogName} worker
 
-You can extend {PlatformName} to connect with {CatalogName} on cloud.redhat.com using the {PlatformNameShort} setup or setup bundle installer.
+You can extend {PlatformName} to connect to {CatalogName} on cloud.redhat.com by using the {PlatformNameShort} setup or setup bundle installer.
 
-This is a Day 2 activity and requires setup of a *service account that has write permissions* on all basic resources/objects in automation controller: organizations, users, projects, job templates and inventories.
+This is a Day 2 activity and requires setup of a *service account that has write permissions* on all basic resources and objects in {ControllerName}: organizations, users, projects, job templates and inventories.
 
-The Catalog worker requires a set of variables assigned to hosts in your Red Hat Ansible Automation Platform network. Running the Catalog worker will create an application and an application token, install the necessary packages, and start the service.
+The Catalog worker requires a set of variables assigned to hosts in your {PlatformName} network. Running the Catalog worker will create an application and an application token, install the necessary packages, and start the service.
 
 include::aap-common/sunset-catalog-content-admonition.adoc[leveloffset=+1]
 
