Updates based on peer review feedback

--- a/downstream/modules/catalog/proc-preparing-worker-installer.adoc
+++ b/downstream/modules/catalog/proc-preparing-worker-installer.adoc
@@ -105,7 +105,7 @@ You can now proceed to run the installer.
 # ./setup.sh
 -----
 
-Running the {CatalogName} worker will create an application and an application token, install the necessary packages, connect to cloud.redhat.com, and start the service.
+Running the {CatalogName} worker creates an application and an application token, install the necessary packages, connect to cloud.redhat.com, and start the service.
 
 
 
