--- a/downstream/modules/platform/ref-platform-notes.adoc
+++ b/downstream/modules/platform/ref-platform-notes.adoc
@@ -34,7 +34,7 @@ For more details, see: https://access.redhat.com/solutions/1519083
 
 .Notes for {RHEL} setups
 
-* PackageKit can frequently interfere with the installation/update mechanism. Consider disabling or removing PackageKit if installed prior to running the setup process.
+* PackageKit can frequently interfere with the installation/update mechanism. Consider disabling or removing PackageKit if installed before running the setup process.
 * Only the "targeted" SELinux policy is supported. The targeted policy can be set to disabled, permissive, or enforcing.
 * When performing a bundled install, refer to _Choosing and obtaining a {PlatformName} installer_ for more information.
 * When installing {ControllerName}, you only need to run `setup.sh`, any repositories needed by Tower are installed automatically.
