--- a/downstream/titles/catalog/onboarding/master.adoc
+++ b/downstream/titles/catalog/onboarding/master.adoc
@@ -14,7 +14,7 @@ include::aap-common/making-open-source-more-inclusive.adoc[leveloffset=+1]
 
 Automation Service Catalog is a service within the {PlatformName}.
 
-Automation Service Catalog allows customers to organize and govern product catalog sources on Ansible Tower across various environments.
+Automation Service Catalog enables customers to organize and govern product catalog sources on Ansible Tower across various environments.
 
 Using Automation Service Catalog you can:
 
