--- a/downstream/modules/platform/ref-controller-system-requirements.adoc
+++ b/downstream/modules/platform/ref-controller-system-requirements.adoc
@@ -54,7 +54,7 @@ h| Requirement | Required
 |===
 
 .Hop nodes
-Serves to route traffic from one part of the Automation Mesh to another (for example, could be a bastion host into another network).
+Serves to route traffic from one part of the {MeshName} to another (for example, could be a bastion host into another network).
 RAM could affect throughput, CPU activity is low.
 Network bandwidth and latency are generally a more important factor than either RAM or CPU.
 
