--- a/downstream/titles/catalog/getting-started/master.adoc
+++ b/downstream/titles/catalog/getting-started/master.adoc
@@ -13,7 +13,7 @@ include::aap-common/making-open-source-more-inclusive.adoc[leveloffset=+1]
 == About {CatalogName}
 
 {CatalogNameStart} is a service within the {PlatformName}.
-{CatalogNameStart} allows customers to organize and govern product catalog sources on Ansible Tower across various environments.
+{CatalogNameStart} enables customers to organize and govern product catalog sources on Ansible Tower across various environments.
 
 Using {CatalogName} you can:
 
