Replace plain text with attributes for content in the platform module (#1194)
* Replace plain text with attributes for content in the platform module

This PR is specific to the 2.3 branch and version of our docs. The main PR is #1119

Replace plain-text with attributes where appropriate

https://issues.redhat.com/browse/AAP-19894

* Updates based on peer review feedback

--- a/downstream/modules/platform/ref-controller-system-requirements.adoc
+++ b/downstream/modules/platform/ref-controller-system-requirements.adoc
@@ -9,7 +9,7 @@ Use the following recommendations for node sizing:
 
 [NOTE]
 ====
-On control and hybrid nodes, allocate a minimum of 20 GB to `/var/lib/awx` for execution environment storage.
+On control and hybrid nodes, allocate a minimum of 20 GB to `/var/lib/awx` for {ExecEnvShort} storage.
 ====
 
 .Execution nodes
@@ -54,7 +54,7 @@ h| Requirement | Required
 |===
 
 .Hop nodes
-Serves to route traffic from one part of the Automation Mesh to another (for example, could be a bastion host into another network).
+Serves to route traffic from one part of the {MeshName} to another (for example, could be a bastion host into another network).
 RAM could affect throughput, CPU activity is low.
 Network bandwidth and latency are generally a more important factor than either RAM or CPU.
 
