--- a/downstream/titles/catalog/getting-started/master.adoc
+++ b/downstream/titles/catalog/getting-started/master.adoc
@@ -12,8 +12,8 @@ include::aap-common/making-open-source-more-inclusive.adoc[leveloffset=+1]
 
 == About {CatalogName}
 
-{CatalogNameStart} is a service within the Red Hat Ansible Automation Platform.
-{CatalogNameStart} allows customers to organize and govern product catalog sources on Ansible Tower across various environments.
+{CatalogNameStart} is a service within the {PlatformName}.
+{CatalogNameStart} enables customers to organize and govern product catalog sources on Ansible Tower across various environments.
 
 Using {CatalogName} you can:
 
